# monk

chrome/app/: chromium_strings.grd  generated_resources.grd  google_chrome_strings.grd  settings_chromium_strings.grdp
chrome/browser/: DEPS  browser_about_handler.cc  browser_resources.grd  chrome_content_browser_client.cc
chrome/browser/autocomplete/: chrome_autocomplete_scheme_classifier.cc
chrome/browser/breadcrumbs/: breadcrumb_manager_tab_helper.cc
chrome/browser/extensions/: extension_management.cc  extension_management.h  extension_tab_util.cc
chrome/browser/password_manager/: chrome_password_manager_client.cc
chrome/browser/permissions/: chrome_permissions_client.cc
chrome/browser/renderer_context_menu/: render_view_context_menu.cc
chrome/browser/resource_coordinator/: tab_manager.cc
chrome/browser/resources/monk_welcome/: BUILD.gn
chrome/browser/search/: search.cc
chrome/browser/sessions/: session_restore_delegate.cc
chrome/browser/signin/: account_consistency_mode_manager.cc
chrome/browser/ui/: BUILD.gn  browser.cc  browser.h  browser_commands.cc  browser_navigator.cc  focus_tab_after_navigation_helper.cc  (+2 more)
chrome/common/: chrome_constants.cc  chrome_content_client.cc  chrome_paths_mac.mm  webui_url_constants.cc  webui_url_constants.h
components/: components_strings.grd  quote_ui_strings.grdp
components/blank_tab_page_ui/: BUILD.gn  blank_tab_page_handler_helper.cc  blank_tab_page_handler_helper.h  blank_tab_page_ui_constants.cc  blank_tab_page_ui_constants.h
components/blank_tab_page_ui/resources/: BUILD.gn  blank_tab_page.html  blank_tab_page.ts
components/quote_ui/: BUILD.gn  quote_handler_helper.cc  quote_handler_helper.h  quote_ui_constants.cc  quote_ui_constants.h
components/quote_ui/resources/: BUILD.gn  quote.css  quote.html  quote.ts
components/resources/: BUILD.gn  blank_tab_page_ui_resources.grdp  components_resources.grd  monk_welcome_resources.grdp  quote_ui_resources.grdp
content/renderer/: render_frame_impl.cc
extensions/browser/: ui_util.cc
(+39 files in other folders)
