# Copyright 2015 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("blank_tab_page_ui") {
  sources = [
    "blank_tab_page_handler_helper.cc",
    "blank_tab_page_handler_helper.h",
    "blank_tab_page_ui_constants.cc",
    "blank_tab_page_ui_constants.h",
  ]

  deps = [
    "//base",
    "//build:chromeos_buildflags",
    "//components/variations",
    "//components/variations/net",
  ]
}
