# Copyright 2015 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("quote_ui") {
  sources = [
    "quote_handler_helper.cc",
    "quote_handler_helper.h",
    "quote_ui_constants.cc",
    "quote_ui_constants.h",
  ]

  deps = [
    "//base",
    "//build:chromeos_buildflags",
    "//components/variations",
    "//components/variations/net",
  ]
}
